Incluida la Marca en LineaPortatilDTO. #80 Actualizado en consecuencia el controlador PedidosController y las pruebas unitarias CreatePedido_test y GetPedido_test.
